actualización de la configuración de MongoDB en .env y mejoras en server.js para la exportación de la app; se añade vercel.json para despliegue en Vercel

--- a/BACKEND/.env
+++ b/BACKEND/.env
@@ -1,3 +1,4 @@
 PORT=4000
-MONGO_URI=mongodb://127.0.0.1:27017/act4
+MONGO_URI=mongodb+srv://isaias:456@cluster0.ozevu2z.mongodb.net/act4?retryWrites=true&w=majority
 JWT_SECRET=supersecreto123
+
